form-reactive/src/etc/grammar/ProcessDataFormParser.ts
// Generated from ../etc/grammar/ProcessDataForm.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ProcessDataFormListener } from "./ProcessDataFormListener";
import { ProcessDataFormVisitor } from "./ProcessDataFormVisitor";


export class ProcessDataFormParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly GROUP_ELEMENTS_LABEL = 17;
	public static readonly WIDGET_TYPE = 18;
	public static readonly INPUT_WIDGET_TYPE = 19;
	public static readonly ID_STRING = 20;
	public static readonly STRING = 21;
	public static readonly NUMBER = 22;
	public static readonly WS = 23;
	public static readonly RULE_processDataForm = 0;
	public static readonly RULE_processInfo = 1;
	public static readonly RULE_dataInput = 2;
	public static readonly RULE_dataGroup = 3;
	public static readonly RULE_dataElement = 4;
	public static readonly RULE_widget = 5;
	public static readonly RULE_dataId = 6;
	public static readonly RULE_isCloneable = 7;
	public static readonly RULE_dataWidget = 8;
	public static readonly RULE_dataType = 9;
	public static readonly RULE_label = 10;
	public static readonly RULE_labelString = 11;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"processDataForm", "processInfo", "dataInput", "dataGroup", "dataElement", 
		"widget", "dataId", "isCloneable", "dataWidget", "dataType", "label", 
		"labelString",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'['", "','", "']'", "'{'", "'\"processName\"'", "':'", "'}'", 
		"'\"widgetType\"'", "'\"dataId\"'", "'\"cloneable\"'", "'true'", "'false'", 
		"'\"dataType\"'", "'\"string\"'", "'\"number\"'", "'\"label\"'", "'\"elements\"'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "GROUP_ELEMENTS_LABEL", "WIDGET_TYPE", 
		"INPUT_WIDGET_TYPE", "ID_STRING", "STRING", "NUMBER", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ProcessDataFormParser._LITERAL_NAMES, ProcessDataFormParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ProcessDataFormParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ProcessDataForm.g4"; }

	// @Override
	public get ruleNames(): string[] { return ProcessDataFormParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ProcessDataFormParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ProcessDataFormParser._ATN, this);
	}
	// @RuleVersion(0)
	public processDataForm(): ProcessDataFormContext {
		let _localctx: ProcessDataFormContext = new ProcessDataFormContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ProcessDataFormParser.RULE_processDataForm);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 24;
			this.match(ProcessDataFormParser.T__0);
			this.state = 28;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProcessDataFormParser.T__3) {
				{
				this.state = 25;
				this.processInfo();
				this.state = 26;
				this.match(ProcessDataFormParser.T__1);
				}
			}

			this.state = 30;
			this.dataInput();
			this.state = 31;
			this.match(ProcessDataFormParser.T__2);
			this.state = 32;
			this.match(ProcessDataFormParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public processInfo(): ProcessInfoContext {
		let _localctx: ProcessInfoContext = new ProcessInfoContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ProcessDataFormParser.RULE_processInfo);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 34;
			this.match(ProcessDataFormParser.T__3);
			this.state = 38;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProcessDataFormParser.T__4) {
				{
				this.state = 35;
				this.match(ProcessDataFormParser.T__4);
				this.state = 36;
				this.match(ProcessDataFormParser.T__5);
				this.state = 37;
				this.labelString();
				}
			}

			this.state = 40;
			this.match(ProcessDataFormParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataInput(): DataInputContext {
		let _localctx: DataInputContext = new DataInputContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ProcessDataFormParser.RULE_dataInput);
		let _la: number;
		try {
			this.state = 62;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 42;
				this.match(ProcessDataFormParser.T__0);
				this.state = 45;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 43;
					this.dataElement();
					}
					break;

				case 2:
					{
					this.state = 44;
					this.dataGroup();
					}
					break;
				}
				this.state = 55;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ProcessDataFormParser.T__1) {
					{
					{
					this.state = 47;
					this.match(ProcessDataFormParser.T__1);
					this.state = 51;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
					case 1:
						{
						this.state = 48;
						this.dataElement();
						}
						break;

					case 2:
						{
						this.state = 49;
						this.dataGroup();
						}
						break;

					case 3:
						{
						this.state = 50;
						this.widget();
						}
						break;
					}
					}
					}
					this.state = 57;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 58;
				this.match(ProcessDataFormParser.T__2);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 60;
				this.match(ProcessDataFormParser.T__0);
				this.state = 61;
				this.match(ProcessDataFormParser.T__2);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataGroup(): DataGroupContext {
		let _localctx: DataGroupContext = new DataGroupContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ProcessDataFormParser.RULE_dataGroup);
		let _la: number;
		try {
			this.state = 84;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 64;
				this.dataId();
				this.state = 65;
				this.match(ProcessDataFormParser.T__1);
				this.state = 66;
				this.match(ProcessDataFormParser.GROUP_ELEMENTS_LABEL);
				this.state = 67;
				this.match(ProcessDataFormParser.T__5);
				this.state = 68;
				this.dataInput();
				this.state = 70;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3) {
					{
					this.state = 69;
					this.isCloneable();
					}
				}

				this.state = 72;
				this.match(ProcessDataFormParser.T__6);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 74;
				this.match(ProcessDataFormParser.T__3);
				this.state = 75;
				this.match(ProcessDataFormParser.GROUP_ELEMENTS_LABEL);
				this.state = 76;
				this.match(ProcessDataFormParser.T__5);
				this.state = 77;
				this.dataInput();
				this.state = 78;
				this.dataId();
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3) {
					{
					this.state = 79;
					this.isCloneable();
					}
				}

				this.state = 82;
				this.match(ProcessDataFormParser.T__6);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataElement(): DataElementContext {
		let _localctx: DataElementContext = new DataElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ProcessDataFormParser.RULE_dataElement);
		let _la: number;
		try {
			this.state = 102;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				this.dataId();
				this.state = 87;
				this.match(ProcessDataFormParser.T__1);
				this.state = 88;
				this.dataWidget();
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3) {
					{
					this.state = 89;
					this.isCloneable();
					}
				}

				this.state = 92;
				this.match(ProcessDataFormParser.T__6);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 94;
				this.match(ProcessDataFormParser.T__3);
				this.state = 95;
				this.dataWidget();
				this.state = 96;
				this.dataId();
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3) {
					{
					this.state = 97;
					this.isCloneable();
					}
				}

				this.state = 100;
				this.match(ProcessDataFormParser.T__6);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public widget(): WidgetContext {
		let _localctx: WidgetContext = new WidgetContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ProcessDataFormParser.RULE_widget);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this.match(ProcessDataFormParser.T__3);
			this.state = 105;
			this.match(ProcessDataFormParser.T__7);
			this.state = 106;
			this.match(ProcessDataFormParser.T__5);
			this.state = 107;
			this.match(ProcessDataFormParser.WIDGET_TYPE);
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProcessDataFormParser.T__1) {
				{
				this.state = 108;
				this.match(ProcessDataFormParser.T__1);
				this.state = 109;
				this.label();
				}
			}

			this.state = 112;
			this.match(ProcessDataFormParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataId(): DataIdContext {
		let _localctx: DataIdContext = new DataIdContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ProcessDataFormParser.RULE_dataId);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			_la = this._input.LA(1);
			if (!(_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 115;
			this.match(ProcessDataFormParser.T__8);
			this.state = 116;
			this.match(ProcessDataFormParser.T__5);
			this.state = 117;
			this.match(ProcessDataFormParser.ID_STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public isCloneable(): IsCloneableContext {
		let _localctx: IsCloneableContext = new IsCloneableContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ProcessDataFormParser.RULE_isCloneable);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			_la = this._input.LA(1);
			if (!(_la === ProcessDataFormParser.T__1 || _la === ProcessDataFormParser.T__3)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 120;
			this.match(ProcessDataFormParser.T__9);
			this.state = 121;
			this.match(ProcessDataFormParser.T__5);
			this.state = 122;
			_la = this._input.LA(1);
			if (!(_la === ProcessDataFormParser.T__10 || _la === ProcessDataFormParser.T__11)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataWidget(): DataWidgetContext {
		let _localctx: DataWidgetContext = new DataWidgetContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ProcessDataFormParser.RULE_dataWidget);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 124;
			this.match(ProcessDataFormParser.T__7);
			this.state = 125;
			this.match(ProcessDataFormParser.T__5);
			this.state = 126;
			this.match(ProcessDataFormParser.INPUT_WIDGET_TYPE);
			}
			{
			this.state = 128;
			this.match(ProcessDataFormParser.T__1);
			this.state = 129;
			this.dataType();
			}
			{
			this.state = 131;
			this.match(ProcessDataFormParser.T__1);
			this.state = 132;
			this.label();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataType(): DataTypeContext {
		let _localctx: DataTypeContext = new DataTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ProcessDataFormParser.RULE_dataType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this.match(ProcessDataFormParser.T__12);
			this.state = 135;
			this.match(ProcessDataFormParser.T__5);
			this.state = 136;
			_la = this._input.LA(1);
			if (!(_la === ProcessDataFormParser.T__13 || _la === ProcessDataFormParser.T__14)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ProcessDataFormParser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(ProcessDataFormParser.T__15);
			this.state = 139;
			this.match(ProcessDataFormParser.T__5);
			this.state = 140;
			this.labelString();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public labelString(): LabelStringContext {
		let _localctx: LabelStringContext = new LabelStringContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, ProcessDataFormParser.RULE_labelString);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			_la = this._input.LA(1);
			if (!(_la === ProcessDataFormParser.ID_STRING || _la === ProcessDataFormParser.STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!ProcessDataFormParser.__ATN) {
			ProcessDataFormParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(ProcessDataFormParser._serializedATN));
		}

		return ProcessDataFormParser.__ATN;
	}

}

export class ProcessDataFormContext extends ParserRuleContext {
	public dataInput(): DataInputContext {
		return this.getRuleContext(0, DataInputContext);
	}
	public EOF(): TerminalNode { return this.getToken(ProcessDataFormParser.EOF, 0); }
	public processInfo(): ProcessInfoContext | undefined {
		return this.tryGetRuleContext(0, ProcessInfoContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_processDataForm; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterProcessDataForm) {
			listener.enterProcessDataForm(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitProcessDataForm) {
			listener.exitProcessDataForm(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitProcessDataForm) {
			return visitor.visitProcessDataForm(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ProcessInfoContext extends ParserRuleContext {
	public labelString(): LabelStringContext | undefined {
		return this.tryGetRuleContext(0, LabelStringContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_processInfo; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterProcessInfo) {
			listener.enterProcessInfo(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitProcessInfo) {
			listener.exitProcessInfo(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitProcessInfo) {
			return visitor.visitProcessInfo(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DataInputContext extends ParserRuleContext {
	public dataElement(): DataElementContext[];
	public dataElement(i: number): DataElementContext;
	public dataElement(i?: number): DataElementContext | DataElementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(DataElementContext);
		} else {
			return this.getRuleContext(i, DataElementContext);
		}
	}
	public dataGroup(): DataGroupContext[];
	public dataGroup(i: number): DataGroupContext;
	public dataGroup(i?: number): DataGroupContext | DataGroupContext[] {
		if (i === undefined) {
			return this.getRuleContexts(DataGroupContext);
		} else {
			return this.getRuleContext(i, DataGroupContext);
		}
	}
	public widget(): WidgetContext[];
	public widget(i: number): WidgetContext;
	public widget(i?: number): WidgetContext | WidgetContext[] {
		if (i === undefined) {
			return this.getRuleContexts(WidgetContext);
		} else {
			return this.getRuleContext(i, WidgetContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_dataInput; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterDataInput) {
			listener.enterDataInput(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitDataInput) {
			listener.exitDataInput(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitDataInput) {
			return visitor.visitDataInput(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DataGroupContext extends ParserRuleContext {
	public dataId(): DataIdContext {
		return this.getRuleContext(0, DataIdContext);
	}
	public GROUP_ELEMENTS_LABEL(): TerminalNode { return this.getToken(ProcessDataFormParser.GROUP_ELEMENTS_LABEL, 0); }
	public dataInput(): DataInputContext {
		return this.getRuleContext(0, DataInputContext);
	}
	public isCloneable(): IsCloneableContext | undefined {
		return this.tryGetRuleContext(0, IsCloneableContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_dataGroup; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterDataGroup) {
			listener.enterDataGroup(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitDataGroup) {
			listener.exitDataGroup(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitDataGroup) {
			return visitor.visitDataGroup(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DataElementContext extends ParserRuleContext {
	public dataId(): DataIdContext {
		return this.getRuleContext(0, DataIdContext);
	}
	public dataWidget(): DataWidgetContext {
		return this.getRuleContext(0, DataWidgetContext);
	}
	public isCloneable(): IsCloneableContext | undefined {
		return this.tryGetRuleContext(0, IsCloneableContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_dataElement; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterDataElement) {
			listener.enterDataElement(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitDataElement) {
			listener.exitDataElement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitDataElement) {
			return visitor.visitDataElement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class WidgetContext extends ParserRuleContext {
	public WIDGET_TYPE(): TerminalNode { return this.getToken(ProcessDataFormParser.WIDGET_TYPE, 0); }
	public label(): LabelContext | undefined {
		return this.tryGetRuleContext(0, LabelContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_widget; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterWidget) {
			listener.enterWidget(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitWidget) {
			listener.exitWidget(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitWidget) {
			return visitor.visitWidget(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DataIdContext extends ParserRuleContext {
	public ID_STRING(): TerminalNode { return this.getToken(ProcessDataFormParser.ID_STRING, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_dataId; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterDataId) {
			listener.enterDataId(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitDataId) {
			listener.exitDataId(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitDataId) {
			return visitor.visitDataId(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class IsCloneableContext extends ParserRuleContext {
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ProcessDataFormParser.RULE_isCloneable; }
	// @Override
	public enterRule(listener: ProcessDataFormListener): void {
		if (listener.enterIsCloneable) {
			listener.enterIsCloneable(this);
		}
	}
	// @Override
	public exitRule(listener: ProcessDataFormListener): void {
		if (listener.exitIsCloneable) {
			listener.exitIsCloneable(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ProcessDataFormVisitor<Result>): Result {
		if (visitor.visitIsCloneable) {
			return visitor.visitIsCloneable(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

